[gd_scene load_steps=5 format=3 uid="uid://dtnvyxnoaexor"]

[ext_resource type="Script" path="res://base_potion.gd" id="1_4hq52"]
[ext_resource type="Texture2D" uid="uid://s8nrvsvr7kyl" path="res://assets/Tiles/tile_0115.png" id="1_nxx5j"]
[ext_resource type="AudioStream" uid="uid://gcgbmsp10v6u" path="res://sound/Minifantasy_Dungeon_SFX/08_human_charge_2.wav" id="3_as0vp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_aevla"]
radius = 7.0

[node name="BasePotion" type="Area2D"]
script = ExtResource("1_4hq52")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_nxx5j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_aevla")

[node name="UseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_as0vp")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="UseSound" to="." method="_on_use_sound_finished"]
